[tool.poetry]
name = "cws2"
version = "0.1.0"
description = "Tool for conlangers to document their languages"
authors = ["m5ka <m5ka@posteo.de>"]
license = "BSD 2-Clause"
readme = "README.md"

[tool.poetry.dependencies]
django = "^5.1.3"
django-environ = "^0.11.2"
django-jinja = "^2.11.0"
django-recaptcha = "^4.0.0"
gunicorn = "^23.0"
mistune = "^3.0.2"
phonecodes = "^1.1.0"
pi-heif = "^0.20"
pillow = "^11.0"
psycopg2 = "^2.9.9"
python = "^3.12"
python-slugify = "^8.0.4"
shortuuid = "^1.0.13"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.3.0"
django-extensions = "^3.2.3"
django-sass = "^1.1.0"
faker = "^24.4.0"
ruff = "^0.3.4"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
pytest-django = "^4.8.0"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "cws2.config.settings"

[tool.ruff]
include = ["pyproject.toml", "cws2/**/*.py", "manage.py"]
exclude = ["cws2/migrations/*.py"]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["F", "E", "W", "I"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
docstring-code-format = true
docstring-code-line-length = "dynamic"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
